Read from wrong variable, setting Gin to release mode

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - .env
     environment:
       ENVIRONMENT: production
+      GIN_MODE: release
       POSTGRES_HOST: database
       POSTGRES_PORT: 5432
       POSTGRES_DB: postgres
