--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       dockerfile: Dockerfile.dev
     volumes:
       - ./:/app
+      - /app/node_modules
     env_file:
       - .env
     environment:
